[tool.poetry]
name = "Scrible"
version = "0.1.0"
description = "A little help you in the transcription process of your audio messages"
authors = ["Andrew Malikov <andrew.devels@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "1.14.28"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "0.782"
black = "19.10b0"
pylama = "^7.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
